--- a/ros2/src/airsim_ros_pkgs/package.xml
+++ b/ros2/src/airsim_ros_pkgs/package.xml
@@ -1,10 +1,10 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version='1.1' encoding='utf-8'?>
 <package format="3">
   <name>airsim_ros_pkgs</name>
   <version>0.0.1</version>
   <description>ROS Wrapper over AirSim's C++ client library</description>
 
-  <maintainer email="ratneshmadaan@gmail.com">Ratnesh Madaan</maintainer>
+  <maintainer email="darcy.byrne@unsw.edu.au">Darcy Byrne</maintainer>
 
   <license>MIT</license>
 
