--- a/Unreal/Environments/Blank/.gitignore
+++ b/Unreal/Environments/Blank/.gitignore
@@ -1,5 +1,5 @@
 # don't check-in Plugins folder we copied from AirSim folder
-Plugins/
+/Plugins
 # Don't add packaged binaries
 Packaged/
 
@@ -21,3 +21,6 @@ Packaged/
 
 # avoid checking in MacOS XCode assets
 *.xcworkspace
+
+# avoid checking in VSCode assets
+*.code-workspace
